set text in matrix & chart bug fix

--- a/src/chart/chart.css
+++ b/src/chart/chart.css
@@ -1,7 +1,7 @@
 .thisplay-chart .bar {
-  fill: steelblue;
+  fill: orange;
 }
 
 .thisplay-chart .bar:hover {
-  fill: #f03223;
+  fill: orchid;
 }
