--- a/src/graph/graph.css
+++ b/src/graph/graph.css
@@ -4,42 +4,30 @@
 	stroke-width : 3px;
 }
 
-.thisplay-graph .node_selected {
-	fill : red;
-	stroke : black;
+.thisplay-graph .nodetext{
+	fill: white;
+	text-align: center;
+	font-size: 	50px;
+	font: arial !important;
+	text-anchor: middle;
+	vertical-align: middle;
+	font-weight : 900;
+}
+
+.thisplay-graph .link {
+  stroke: #999;
+  stroke-width: 15;
+  cursor: crosshair;
 }
 
 .thisplay-graph .linktext{
 	fill: black;
 	text-align: center;
-	font-size: 20px;
-	font: arial;
+	font-size: 50px;
+	font: arial !important;
 	text-anchor: middle;
 	vertical-align: middle;
 	font-weight : 900;
-}
-
-.thisplay-graph .nodetext{
-	fill: white;
-	text-align: center;
-	font-size: 	30px;
-	font: sans-serif;
-	text-anchor: middle;
-	vertical-align: middle;
-	font-weight : 900;
-}
-
-.thisplay-graph .nodetext_selected {
-	fill: #0010f0;
-	font-size = 50px;
-	text-anchor: middle;
-	vertical-align: text-bottom;
-}
-
-.thisplay-graph .link {
-  stroke: #999;
-  stroke-width: 5;
-  cursor: crosshair;
 }
 
 .thisplay-graph .path {
@@ -48,6 +36,3 @@
   cursor: crosshair;
 }
 
-.thisplay-graph .link_selected {
-  stroke: #ff7f0e;
-}
