#1 1. makeUndirectedEdge 오류 수정 2. css 수정

--- a/src/graph/graph.css
+++ b/src/graph/graph.css
@@ -7,7 +7,7 @@
 .thisplay-graph .nodetext{
 	fill: white;
 	text-align: center;
-	font-size: 	50px;
+	font-size: 	50px !important;
 	font: arial !important;
 	text-anchor: middle;
 	vertical-align: middle;
@@ -23,7 +23,7 @@
 .thisplay-graph .linktext{
 	fill: black;
 	text-align: center;
-	font-size: 50px;
+	font-size: 50px !important;
 	font: arial !important;
 	text-anchor: middle;
 	vertical-align: middle;
