#1 graph 1. linktext 위치조정 2. 색 조정 3. api 개수 조정 ( unhighlightAll 등의 함수를 unhighlight 와 합침 )  4. force 계수 조정

--- a/src/graph/graph.css
+++ b/src/graph/graph.css
@@ -1,5 +1,5 @@
 .thisplay-graph .node {
-	fill: black;
+	fill: #0aa;
 	stroke: white;
 	stroke-width : 3px;
 }
@@ -15,7 +15,7 @@
 }
 
 .thisplay-graph .link {
-  stroke: #999;
+  stroke: #ccc;
   stroke-width: 15;
   cursor: crosshair;
 }
